@@ -4,12 +4,13 @@ import com.fiap.burguer.infraestructure.entities.ProductEntity;
 import com.fiap.burguer.core.domain.Product;
 import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Component;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ProductMapper {
+
+    private  ProductMapper(){}
+
     public static ProductEntity toEntity(Product product) {
         if(product == null) return null;
         ProductEntity productEntity = new ProductEntity();
@@ -25,9 +26,10 @@ public class ProductMapper {
     }
 
     public static List<Product> toDomain(List<ProductEntity> productEntities) {
-        if(productEntities == null) return null;
+        if(productEntities == null) return List.of();
         return productEntities.stream()
                 .map(ProductMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+
     }
 }
